--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   http: ^0.13.4
   flutter_riverpod: ^2.0.2
   path_provider: ^2.0.2
+  html: ^0.15.0
+  webview_flutter: ^4.2.2
 
 
   # The following adds the Cupertino Icons font to your application.
